# slack-bot-app

./: DRCODEOWNERS  README.md  manifest.json  slack_manifest.json  template_info.json
src/: config.py  datarobot_client.py  flask_app.py  metadata.yaml  pyproject.toml  requirements.txt  skills.md  slack_app.py  start-app.sh  system_prompt.md  web_app.py
src/listeners/: __init__.py
src/listeners/events/: __init__.py  sample_app_home.py  sample_app_mention.py
src/listeners/messages/: __init__.py  sample_llm.py  sample_messages.py
src/templates/: index.html
