[project]
name = "slack-bot-app"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "slack_bolt>=1.20.1",
    "aiohttp>=3.10.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.11.0",
    "ty>=0.0.26",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["listeners", "web_app", "datarobot_client"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
environment = { python-version = "3.12" }

[tool.uv]
package = false
